# project_template

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
0_data/: README.md
0_data/0_raw/: README.md
0_data/1_intermediate/: README.md
0_data/2_clean/: README.md
0_raw/: README.md
0_raw/example_submodule/: README.md
1_code/: README.md  run_all.sh
1_data_prep/: README.md  run_all.sh
1_data_prep/code/nyc_dogs/: clean_dogs_data.py
1_data_prep/example_submodule/: clean_dogs_data.py
2_analysis/: README.md  run_all.sh
2_analysis/code/nyc_dogs/: dog_descriptives.py
2_analysis/example_submodule/: dog_descriptives.py
2_output/: README.md
3_sandbox/: README.md
4_notes/: README.md
4_notes/example_submodule/: make.sh  nyc_dogs.tex
4_notes/nyc_dogs/: make.sh
4_notes/template/: notes_template.tex
4_slides/: README.md
4_slides/20240915_first_slides/: make.sh
5_paper/: README.md
5_paper/20240916_first_draft/: make.sh
5_slides/20240915_first_slides/: make.sh  my_project_slides.tex
6_notes/: README.md  notes_template.tex
6_paper/20240916_first_draft/: make.sh
lib/: run_latex.sh
